# irwa_final_part

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  web_app.py  web_app_copia_seguridad.py
Scripts/: activate  activate.bat  activate.fish  activate.nu
app/analytics/: analytics_data.py
app/core/: utils.py
app/search_engine/: search_engine.py
myapp/: init_db.py
myapp/analytics/: analytics_data.py
myapp/models/: click.py  queries.py  request.py  session.py
myapp/ranking_preparation/: indexing.py  preprocessing.py  ranking.py
myapp/search/: Tweet.py  algorithms.py  load_corpus.py  objects.py  search_engine.py
templates/: dashboard.html  doc_details.html  sentiment.html  stats.html
